# jhcr

./: GNUmakefile  Instruction.hs  Instruction.j  Main.hs  Makefile  PairingHeap.j  Readme.md  Table.j  cabal.project.freeze  cabal.project.local.128  cabal.project.local.132  compile.hs  convert.hs  flake.nix  hot.hs  interpreter.py  jass-hot-code-reload.cabal  jhcr.cabal  jhcr.nix  process.sh  setup.sh
Hot/: Ast.hs  HandleCode.hs  Instruction.hs  JassHelper.hs  Types.hs  Var.hs
Hot/Init/: Auto.hs  Rename.hs  Stubs.hs
Hot/Instruction/: Compiler.hs
Hot/Instruction/Opt/: Rewrite.hs
Hot/Instruction/Opt/Rewrite/: SomeRules.hs
Hot/Jass/: Init.hs
Jass/: Ast.hs  Parser.hs  Printer.hs  jass.x
Jass/Opt/: Rewrite.hs
Jass/Parser/: Internal.hs
runtime/: alloc-globals.j  alloc.j  context.j  convert.j  heap.j  init.j  instruction-parser.j  instruction.j  interpreter.j  list.j  modified.j  names.j  parser.j  print.j  scopes.j  stringtable.j  table.j  wrap-around.j
src/: Main.hs  convert.hs  process.sh
src/Hot/: HandleCode.hs  Instruction.hs  Var.hs
src/Hot/Init/: Auto.hs  Rename.hs  Stubs.hs
src/Hot/Instruction/: Compiler.hs
src/Hot/Instruction/Opt/: Rewrite.hs
src/Hot/Instruction/Opt/Rewrite/: SomeRules.hs
src/Jass/: LCA.hs  Parser.hs
src/Jass/Opt/Rewrite/: SomeRules.hs
src/runtime/: alloc.j  api.j  context.j  init.j  instruction.j  interpreter.j  parser.j  print.j  table.j  wrap-around.j
